# roasted

./: .gitignore  Cargo.toml  LICENSE  README.md  build.gradle.kts  build.rs  rust-toolchain.toml  rustfmt.toml  settings.gradle.kts
.github/workflows/: ci.yaml
config/: default.yaml
db/: schema.sql
db/migrations/: 20240303063729_intial.sql
db/queries/: bean.sql  roast.sql  roast_level.sql
design/: roasted-logo.afdesign
docs/: data-model.md
gradle/wrapper/: gradle-wrapper.properties
scripts/: bootstrap_db.sh  bootstrap_db.sql
src/: config.rs  cornucopia.rs  db.rs  lib.rs  main.rs  server.rs  telemetry.rs
src/bean/: model.rs  routes.rs  service.rs
src/main/java/com/mcarlin/roasted/: RoastedApplication.java
src/roast/: mod.rs  model.rs  routes.rs  service.rs
