[package]
name = "roasted"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = "0.7.4"
config = "0.14.0"
cornucopia_async = "0.6.0"
deadpool-postgres = "0.12.1"
futures = "0.3.30"
postgres-types = { version = "0.2.6", features = ["derive"] }
rust_decimal = { version = "1.34.3", features = ["db-postgres"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
time = { version = "0.3.34" , features = ["serde"]}
tokio = { version = "1.36.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = [
    "with-time-0_3",
    "with-uuid-1",
]}
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.0", features = [ "axum_extras" ] }
uuid = { version = "1.7.0", features = ["serde"] }
log = "0.4.21"

[build-dependencies]
cornucopia = "0.9.0"

[lib]
name = "roasted"
path = "src/lib.rs"

[[bin]]
name = "roasted"
path = "src/main.rs"
